made changes to objects.js

--- a/js-warmups.html
+++ b/js-warmups.html
@@ -21,20 +21,20 @@
 
             */
 
-            // function addTen(input){
-            //     if (typeof input === "number"){
-            //         return input + 10;
-            //     } else {
-            //         return false;
-            //     }
-            // }
-            //
-            // console.log(addTen(0));
-            // console.log(addTen(10));
-            // console.log(addTen('bob'));
-            // console.log(addTen(-10));
-            // console.log(addTen(-200));
-            // console.log(addTen('larry'));
+            function addTen(input){
+                if (typeof input === "number"){
+                    return input + 10;
+                } else {
+                    return false;
+                }
+            }
+
+            console.log(addTen(0));
+            console.log(addTen(10));
+            console.log(addTen('bob'));
+            console.log(addTen(-10));
+            console.log(addTen(-200));
+            console.log(addTen('larry'));
 
             function makeUpperCase(input){
                 if (typeof input === "string"){
