--- a/welcome.html
+++ b/welcome.html
@@ -3,64 +3,69 @@
     <head>
         <meta charset="UTF-8">
         <title>Veridian Dynamics</title>
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-        <h1>Welcome to Veridian Dynamics!</h1>
-        <p>
-            At Veridian Dynamics, <strong>we</strong> solve <em>your</em> problems with <strong><em>technology</em></strong>.
-        </p>
-        <hr>
-        <h2>Core Values</h2>
-        <ul>
-            <li>Competence</li>
-            <li>Involvement</li>
-            <li>Technology</li>
-        </ul>
-        <h2>Our Process</h2>
-        <ol>
-            <li>Plan</li>
-            <li>Evaluate</li>
-            <li>Implement</li>
-        </ol>
-        <h2>2020 Vision</h2>
-        <ul>
-            <li>Become #1 in Technology</li>
-            <li>Increase Success by 20%</li>
-            <li>Increase Business by 30%</li>
-        </ul>
-        <hr>
-        <h2>Company Vision</h2>
-        <div>
-            <img src="https://images.thebusinessplanshop.com/business-model-et-business-plan.jpg" alt="Hotlinked Business Photo">
-            <img src="https://images.thebusinessplanshop.com/business-model-et-business-plan.jpg" alt="Hotlinked Business Photo">
-        </div>
-        <div>
-            <img src="https://images.thebusinessplanshop.com/business-model-et-business-plan.jpg" alt="Hotlinked Business Photo">
-            <img src="https://images.thebusinessplanshop.com/business-model-et-business-plan.jpg" alt="Hotlinked Business Photo">
-        </div>
-        <h2>Our Product</h2>
-        <table>
-            <tr>
-                <th>Plan</th>
-                <th>Price</th>
-                <th>Features</th>
-            </tr>
-            <tr>
-                <td>Starter</td>
-                <td>$99</td>
-                <td>Base Technology</td>
-            </tr>
-            <tr>
-                <td>Advanced</td>
-                <td>$199</td>
-                <td>Additional Features</td>
-            </tr>
-            <tr>
-                <td>Premium</td>
-                <td>$499</td>
-                <td>Unlimited Support</td>
-            </tr>
-        </table>
+        <section>
+            <h1 class="fancy-header">Welcome to Veridian Dynamics!</h1>
+            <p>At Veridian Dynamics, <strong>we</strong> solve <em>your</em> problems with <strong><em>technology</em></strong>.</p>
+            <hr>
+            <h2>Core Values</h2>
+            <ul>
+                <li>Competence</li>
+                <li>Involvement</li>
+                <li>Technology</li>
+            </ul>
+            <h2>Our Process</h2>
+            <ol>
+                <li>Plan</li>
+                <li>Evaluate</li>
+                <li>Implement</li>
+            </ol>
+            <h2>2020 Vision</h2>
+            <ul>
+                <li>Become #1 in Technology</li>
+                <li>Increase Success by 20%</li>
+                <li>Increase Business by 30%</li>
+            </ul>
+            <hr>
+        </section>
+        <section>
+            <h2>Company Vision</h2>
+            <div>
+                <img src="https://images.thebusinessplanshop.com/business-model-et-business-plan.jpg" alt="Hotlinked Business Photo">
+                <img src="https://images.thebusinessplanshop.com/business-model-et-business-plan.jpg" alt="Hotlinked Business Photo">
+            </div>
+            <div>
+                <img src="https://images.thebusinessplanshop.com/business-model-et-business-plan.jpg" alt="Hotlinked Business Photo">
+                <img src="https://images.thebusinessplanshop.com/business-model-et-business-plan.jpg" alt="Hotlinked Business Photo">
+            </div>
+        </section>
+        <section>
+            <h2>Our Product</h2>
+            <table>
+                <tr>
+                    <th>Plan</th>
+                    <th>Price</th>
+                    <th>Features</th>
+                </tr>
+                <tr>
+                    <td>Starter</td>
+                    <td>$99</td>
+                    <td>Base Technology</td>
+                </tr>
+                <tr>
+                    <td>Advanced</td>
+                    <td>$199</td>
+                    <td>Additional Features</td>
+                </tr>
+                <tr>
+                    <td>Premium</td>
+                    <td>$499</td>
+                    <td>Unlimited Support</td>
+                </tr>
+            </table>
+        </section>
         <br>
         <p><em>All products come with our quality guarantee™</em></p>
         <h4><a href="#top"><strong>Go to the top of the page.</strong></a></h4>
