--- a/layout.html
+++ b/layout.html
@@ -6,12 +6,55 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="css/layout.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Ysabeau:wght@100&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/resets.css">
+    <link rel="stylesheet" href="css/layout.css">
+    <link rel="stylesheet" href="css/layout-exercise.css">
+
 </head>
 <body>
     <div class="page-wrapper">
-
+        <header class="container justify-center">
+            <div class="row justify-space-between">
+                <div class="column shrink">
+                    <a href="/">
+                        <img src="img/example-logo.svg" alt="Logo">
+                    </a>
+                </div>
+                <nav class="column shrink">
+                    <ul class="d-flex gap-10 align-center">
+                        <li>
+                            <a class="menu-item" href="/">Home</a>
+                        </li>
+                        <li>
+                            <a class="menu-item" href="/overview">Overview</a>
+                        </li>
+                        <li>
+                            <a class="menu-item" href="/features">Features</a>
+                        </li>
+                        <li>
+                            <a class="menu-item" href="/sign-up">
+                                <button class="btn-primary">Sign Up</button>
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </header>
+        <section class="container middle-page justify-center">
+            <div class="row align-center gap-30">
+                <div class="column justify-center">
+                    <h5>An Exercise in Web Layouts</h5>
+                    <h1>We are all Masters of the frontend.</h1>
+                    <h4>Home is behind, the world ahead and there are many paths to tread through shadows to the.</h4>
+                </div>
+                <div class="column">
+                    <p class="square"></p>
+                </div>
+            </div>
+        </section>
     </div>
 </body>
 </html>
