added notes in layout.css

--- a/js-warmups.html
+++ b/js-warmups.html
@@ -74,6 +74,16 @@
             console.log(sumIsEqual('10', '2', 12)); // returns false
             console.log(sumIsEqual('fred', 'bob', 'hello')); // returns false
 
+
+            function returnUserObject(username, password, email) {
+                return {
+                    username: 'jreich',
+                    password: 'password123',
+                    email: 'jreich@email.com',
+                }
+            }
+
+            console.log(returnUserObject('jreich', 'password123', 'jreich@email'));
         </script>
     </body>
 </html>
