--- a/dom-lecture-notes.html
+++ b/dom-lecture-notes.html
@@ -6,7 +6,8 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>DOM Lecture</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+          integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <style>
         body {
             background: #eee;
@@ -22,7 +23,6 @@
     </div>
 </header>
 <main class="container">
-
     <section class="row">
         <div class="col">
             <h2>Some Table</h2>
@@ -78,7 +78,8 @@
                 <img src="img/cat.jpg" alt="" class="card-img-top img-fluid">
                 <div class="card-body">
                     <h3 class="card-title">Card </h3>
-                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet dicta fugit molestiae necessitatibus obcaecati odit praesentium quos rem repellendus tempore!</p>
+                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet dicta fugit
+                        molestiae necessitatibus obcaecati odit praesentium quos rem repellendus tempore!</p>
                 </div>
             </div>
         </div>
@@ -87,7 +88,8 @@
                 <img src="img/cat.jpg" alt="" class="card-img-top img-fluid">
                 <div class="card-body">
                     <h3 class="card-title">Card </h3>
-                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto aspernatur assumenda cum eaque magnam modi nemo nostrum repellendus veritatis voluptatem!</p>
+                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto aspernatur
+                        assumenda cum eaque magnam modi nemo nostrum repellendus veritatis voluptatem!</p>
                 </div>
             </div>
         </div>
@@ -96,7 +98,8 @@
                 <img src="img/cat.jpg" alt="" class="card-img-top img-fluid">
                 <div class="card-body">
                     <h3 class="card-title">Card </h3>
-                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus aliquam atque commodi corporis ex expedita fugit iste neque reiciendis reprehenderit?</p>ates.</p>
+                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus aliquam
+                        atque commodi corporis ex expedita fugit iste neque reiciendis reprehenderit?</p>ates.</p>
                 </div>
             </div>
         </div>
@@ -105,7 +108,8 @@
                 <img src="img/cat.jpg" alt="" class="card-img-top img-fluid">
                 <div class="card-body">
                     <h3 class="card-title">Card </h3>
-                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam explicabo porro provident quidem sint! Architecto eligendi iusto natus necessitatibus recusandae!</p>
+                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam explicabo
+                        porro provident quidem sint! Architecto eligendi iusto natus necessitatibus recusandae!</p>
                 </div>
             </div>
         </div>
@@ -121,7 +125,8 @@
                 </div>
                 <div class="form-group">
                     <label for="feedback">Feedback</label>
-                    <textarea class="form-control" name="feedback" id="feedback" cols="30" rows="10" placeholder="Give us your opinion"></textarea>
+                    <textarea class="form-control" name="feedback" id="feedback" cols="30" rows="10"
+                              placeholder="Give us your opinion"></textarea>
                 </div>
                 <button class="btn btn-primary btn-block">Submit</button>
             </form>
@@ -140,9 +145,15 @@
 
 </main>
 
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+        crossorigin="anonymous"></script>
 <script src="js/dom-lecture.js"></script>
 
 </body>
