finished dom-query-js.html

--- a/dom-query-js.html
+++ b/dom-query-js.html
@@ -28,25 +28,43 @@
     (function () {
         "use strict";
         // TODO: Uncomment next line and get the main header element by id
-        // var mainHeader = ;
+        var mainHeader = document.getElementById('main-header');
+        console.log(mainHeader);
 
         // TODO: Set inner html of mainHeader to "JavaScript is Cool"
+        mainHeader.innerHTML = "JavaScript is Cool";
+        console.log(mainHeader);
 
         // TODO: Uncomment the next line and get the sub header element by id
-        // var subHeader = ;
+        var subHeader = document.getElementById('sub-header');
+        console.log(subHeader);
 
         // TODO: Set the text color of subHeader to blue
+        subHeader.style.color = 'blue';
 
         // TODO: Uncomment the next line and get all list items
-        // var listItems = ;
+        var listItems = document.querySelectorAll('li');
 
         // TODO: Set text color on every other list item to grey
-        // TODO: Set text color of li with dbid = 1 to blue
+        listItems.forEach((item, index) => {
+            if (index % 2 === 1) {
+                item.style.color = 'grey';
+            }
+        });
+
+
+        // TODO: Set text color of li with 'dbid = 1' to blue
+        let littleBlue = document.querySelector('li');
+        littleBlue.style.color = 'blue'
+
 
         // TODO: Uncomment the next line and get all elements with class name sub-paragraph
-        // var subParagraphs = ;
+        var subParagraphs = document.getElementsByClassName(subParagraphs);
 
         // TODO: Change the text in the first sub paragraph to "Mission Accomplished!"
+        document.querySelector("p").innerHTML = "Mission Accomplished!"
+
+
     })();
 </script>
 </body>
