added a new js-warmsups.html

--- a/js-warmups.html
+++ b/js-warmups.html
@@ -263,6 +263,31 @@
     console.log(returnLargestStudentCount(classes)); // returns 30
 
 
+    function printOneToAHundred() {
+        for (let i = 1; i <= 100; i += 1) {
+            console.log(i);
+        }
+    }
+
+    printOneToAHundred();
+
+
+    function fizzBuzz(){
+        for (let i = 1; i <= 100; i += 1){
+            if (i % 3 === 0 && i % 5 === 0) {
+                console.log('fizzbuzz');
+            }else if(i % 3 === 0){
+                console.log('fizz');
+            }else if(i % 5 === 0){
+                console.log('buzz');
+            }else{
+                console.log(i);
+            }
+        }
+    }
+
+    fizzBuzz();
+
 </script>
 </body>
 </html>
