--- a/jquery_selectors.html
+++ b/jquery_selectors.html
@@ -5,16 +5,17 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>JQuery Exercises</title>
+    <title>Document</title>
+
 </head>
 <body>
 
-<h1 id="title-selector" class="title">jQuery Selectors</h1>
+<h1 class="title">jQuery Selectors</h1>
 
-<div id="id-container" class="container">
+<div id="id-container">
     <h2 class="title">IDs</h2>
     <p id="paragraph1">This is paragraph 1.</p>
-    <p id="paragraph2" class="codeup">This is paragraph 2.</p>
+    <p id="paragraph2">This is paragraph 2.</p>
 </div>
 
 
@@ -24,14 +25,13 @@
 
 <h2 class="title">HTML Elements</h2>
 <ul>
-    <li class="codeup">Item 1</li>
+    <li>Item 1</li>
     <li>Item 2</li>
-    <li class="codeup">Item 3</li>
+    <li>Item 3</li>
 </ul>
 
 
-<script src="https://code.jquery.com/jquery-3.7.0.min.js"
-        integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
-<script src="js/jquery_exercises.js"></script>
+<script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
+<script src="js/jquery_selectors.js"></script>
 </body>
 </html>
