--- a/js-warmups.html
+++ b/js-warmups.html
@@ -272,15 +272,15 @@
     printOneToAHundred();
 
 
-    function fizzBuzz(){
-        for (let i = 1; i <= 100; i += 1){
+    function fizzBuzz() {
+        for (let i = 1; i <= 100; i += 1) {
             if (i % 3 === 0 && i % 5 === 0) {
                 console.log('fizzbuzz');
-            }else if(i % 3 === 0){
+            } else if (i % 3 === 0) {
                 console.log('fizz');
-            }else if(i % 5 === 0){
+            } else if (i % 5 === 0) {
                 console.log('buzz');
-            }else{
+            } else {
                 console.log(i);
             }
         }
@@ -288,6 +288,36 @@
 
     fizzBuzz();
 
+
+    const runners = [
+        {name: "Alice", age: 25, lapTimes: [50.5, 45.2, 48.8, 47.1]},
+        {name: "Bob", age: 28, lapTimes: [55.2, 50.7, 53.3, 52.9]},
+        {name: "Charlie", age: 24, lapTimes: [48.9, 46.3, 50.1, 49.5]},
+        {name: "David", age: 27, lapTimes: [51.4, 50.2, 49.8, 52.3]},
+        {name: "Eve", age: 26, lapTimes: [47.7, 45.9, 46.6, 48.3]},
+    ];
+
+    function getTopRunners(runnersArray) {
+        let topRunners = [];
+        for (let runner of runnersArray) {
+            if (calculateLapTimeAverage(runner.lapTimes) <= 50) {
+                topRunners.push(runner);
+            }
+        }
+        return topRunners;
+    }
+
+    function calculateLapTimeAverage(lapTimesArray) {
+        let total = 0;
+        let count = 0;
+        for (let lapTime of lapTimesArray) {
+            total += lapTime;
+            count++;
+        }
+        return total / count;
+    }
+
+    console.log(getTopRunners(runners));
 </script>
 </body>
 </html>
