made changes to konami.js

--- a/konami.html
+++ b/konami.html
@@ -7,13 +7,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Konami</title>
 </head>
-<body>
-<h1>Konami Code</h1>
+<body id="container">
+<h1 id="header-name">Konami Code</h1>
 <script>
 
 </script>
 <script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
-<script src="js/jquery.js"></script>
+<script src="js/konami.js"></script>
 </body>
 </html>
 
