added audio file to konami.js

--- a/konami.html
+++ b/konami.html
@@ -8,10 +8,11 @@
     <title>Konami</title>
 </head>
 <body id="container">
-<h1 id="header-name">Konami Code</h1>
-<script>
+<h1 id="header-name">Konami Code "enter the code"</h1>
 
-</script>
+<video tabindex="-1" class="video-stream html5-main-video" controlslist="nodownload" src="blob:https://www.youtube.com/a8e77cee-4179-4223-9b83-8124c350c0df" style="width: 559px; height: 314px; left: 0px; top: 0px;"></video>
+
+<audio id="audio" src="audio/america.mp3"></audio>
 <script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
 <script src="js/konami.js"></script>
 </body>
