--- a/konami.html
+++ b/konami.html
@@ -8,7 +8,7 @@
     <title>Konami</title>
 </head>
 <body id="container">
-<h1 id="header-name">KOBAYASHI MARU "enter the code"</h1>
+<h1 id="header-name">"THE KOBAYASHI MARU"</h1>
 
 
 <audio id="audio" src="audio/america.mp3"></audio>
