--- a/jquery_faq.html
+++ b/jquery_faq.html
@@ -5,9 +5,42 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Info about National Parks</title>
 </head>
 <body>
+<h1>Info about National Parks</h1>
+<dl>
+    <dt>#1</dt>
+    <dd>There are 63 National Parks in the US.</dd>
+
+    <dt>#2</dt>
+    <dd>The Unique parks to go to are: Grand Canyon, Yosemite, Yellowstone, Rocky Mountains, Zion, Arches, Acadia, Great Smokey Mountains and Everglades</dd>
+
+    <dt>#3</dt>
+    <dd>The most overnight stayed parks are: Grand Canyon, Yosemite and Yellowstone</dd>
+
+    <dt>#4</dt>
+    <dd>The parks with most amount of wildlife are: Theodore Roosevelt, Isle Royale, Rocky Mountains, Alasks's Denali</dd>
+
+    <dt>#5</dt>
+    <dd>Each Park have the ability to have Guided Tours but must visit the visitor and welcome centers.</dd>
+
+    <dt>#6</dt>
+    <dd>Last year there were 327 million park visits in the US.</dd>
+
+    <dt>#7</dt>
+    <dd>Each Park has its own specific rules which can be found at their local visitor centers.</dd>
+
+    <dt>#8</dt>
+    <dd>Each park has digital and downloadable maps as well as hard copies.</dd>
+
+    <dt>#9</dt>
+    <dd>Campsites are available on a first-come first serve basis but you can still make reservations online.</dd>
+
+    <dt>#10</dt>
+    <dd>National Parks were established by Congress in 1916 to give American people the opportunity to enjoy public lands and make recreational activity more accessible to the public. </dd>
+</dl>
+
 
 </body>
 <script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
