--- a/jquery_faq.html
+++ b/jquery_faq.html
@@ -6,6 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Info about National Parks</title>
+    <link rel="stylesheet" href="css/jquery_faq.css">
 </head>
 <body>
 <h1>Info about National Parks</h1>
