--- a/jquery_faq.html
+++ b/jquery_faq.html
@@ -9,19 +9,23 @@
     <link rel="stylesheet" href="css/jquery_faq.css">
 </head>
 <body>
-<h1>Info about National Parks</h1>
+<h1 class="parks-header">Info about National Parks</h1>
+
 <dl>
     <dt>#1</dt>
     <dd>There are 63 National Parks in the US.</dd>
 
     <dt>#2</dt>
-    <dd>The Unique parks to go to are: Grand Canyon, Yosemite, Yellowstone, Rocky Mountains, Zion, Arches, Acadia, Great Smokey Mountains and Everglades</dd>
+    <dd>The Unique parks to go to are: Grand Canyon, Yosemite, Yellowstone, Rocky Mountains, Zion, Arches, Acadia, Great
+        Smokey Mountains and Everglades
+    </dd>
 
     <dt>#3</dt>
     <dd>The most overnight stayed parks are: Grand Canyon, Yosemite and Yellowstone</dd>
 
     <dt>#4</dt>
-    <dd>The parks with most amount of wildlife are: Theodore Roosevelt, Isle Royale, Rocky Mountains, Alasks's Denali</dd>
+    <dd>The parks with most amount of wildlife are: Theodore Roosevelt, Isle Royale, Rocky Mountains, Alasks's Denali
+    </dd>
 
     <dt>#5</dt>
     <dd>Each Park have the ability to have Guided Tours but must visit the visitor and welcome centers.</dd>
@@ -39,11 +43,57 @@
     <dd>Campsites are available on a first-come first serve basis but you can still make reservations online.</dd>
 
     <dt>#10</dt>
-    <dd>National Parks were established by Congress in 1916 to give American people the opportunity to enjoy public lands and make recreational activity more accessible to the public. </dd>
+    <dd>National Parks were established by Congress in 1916 to give American people the opportunity to enjoy public
+        lands and make recreational activity more accessible to the public.
+    </dd>
+    <br>
+    <button class="btn-1 btn-primary">Read More</button>
 </dl>
 
+<div>
+    <h3>Zion</h3>
+    <ul>
+        <li>Zion Angels landing provides great views but its also one the world's most dangerous.</li>
+        <li>Zion Canyon is continually changing.</li>
+        <li>Zion is a climbers paradise.</li>
+        <li>The park has a Subway, but it's not a form of public transportation.</li>
+    </ul>
 
+    <h3>Yosemite</h3>
+    <ul>
+        <li>Yosemite's granite rock formations glow like fire at sunset.</li>
+        <li>Is home to one of the tallest waterfalls in the world at 2425 feet.</li>
+        <li>Is one of the few places in the US where you can see a rainbow at night.</li>
+        <li>Is the only national park to bid to host the winter Olympics.</li>
+    </ul>
+
+    <h3>Everglades</h3>
+    <ul>
+        <li>Is home to one of the largest wetlands in the world.</li>
+        <li>Receives an average of 60 inches of rain a year.</li>
+        <li>Contains the largest contiguous stand of protected mangroves in the western hemisphere.</li>
+        <li>A Nike Hercules Missile Base is still housed in the heart of the Everglades</li>
+    </ul>
+    <button class="btn-2 btn-primary">ul/li</button>
+</div>
+<br>
+
+<div>
+    sdf
+</div>
+
+<div>
+    sdfs
+</div>
+
+<div>
+    sfsdf
+</div>
+
+<br>
+<a href="#top">Back to Home</a>
 </body>
-<script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.7.0.min.js"
+        integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
 <script src="js/jquery_faq.js"></script>
 </html>
