updated jquery_faq.html, css and js

--- a/jquery_faq.html
+++ b/jquery_faq.html
@@ -77,19 +77,29 @@
     <button class="btn-2 btn-primary">ul/li</button>
 </div>
 <br>
+<div class="box-wrapper" style="text-align: center">
+    <div id="box1" style="width: 18rem">
+        <div class="card-body">
+            <img src="http://placeholder.pics/svg/100" alt="unknown1">
+        </div>
+        <button class="swap-btn btn-primary">Button</button>
+    </div>
 
-<div>
-    sdf
+    <div id="box2" style="width: 18rem">
+        <div class="card-body">
+            <img src="http://placeholder.pics/svg/101" alt="unknown2">
+        </div>
+        <button class="swap-btn btn-primary">Button</button>
+    </div>
+
+    <div id="box3" style="width: 18rem">
+        <div class="card-body">
+            <img src="http://placeholder.pics/svg/102" alt="unknown3">
+        </div>
+        <button class="swap-btn btn-primary">Button</button>
+    </div>
 </div>
-
-<div>
-    sdfs
-</div>
-
-<div>
-    sfsdf
-</div>
-
+<br>
 <br>
 <a href="#top">Back to Home</a>
 </body>
