--- a/ajax-blog.html
+++ b/ajax-blog.html
@@ -6,22 +6,27 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Ajax Blog</title>
+    <link rel="stylesheet" href="css/ajax-blog.css">
 </head>
 <body>
 <div id="posts">
-
-
-
-
+    <table id="blogs">
+        <thead>
+        <tr>
+            <th>Title</th>
+            <th>Content</th>
+            <th>Categories</th>
+            <th>Date</th>
+        </tr>
+        </thead>
+        <tbody id="insertBlogs"></tbody>
+    </table>
 
 </div>
-
-
-
-
 
 
 </body>
 <script src="https://code.jquery.com/jquery-3.7.0.min.js"
         integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
+<script src="js/ajax-blog.js"></script>
 </html>
