--- a/ajax-blog.html
+++ b/ajax-blog.html
@@ -6,9 +6,11 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Ajax Blog</title>
+    <link rel="stylesheet" href="css/resets.css">
     <link rel="stylesheet" href="css/ajax-blog.css">
 </head>
 <body>
+<h1>Blog</h1>
 <div id="posts">
     <table id="blogs">
         <thead>
