--- a/mapbox-api.html
+++ b/mapbox-api.html
@@ -8,14 +8,20 @@
     <title>Document</title>
 
     <script src="js/keys.js"></script>
+    <script src="js/mapbox-geocoder-utils.js"></script>
+
+
     <script src='https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js'></script>
     <link href='https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css' rel='stylesheet'/>
 </head>
 <body>
+<h1></h1>
 
 <div id="map" style="height: 20rem; width: 20rem"></div>
 
-
+<button id="geocode-button">Got To Paris</button>
+<button id="reverse-geocode-button">Show Address</button>
+<button id="mark-alamo">Mark the Alamo</button>
 
 
 
